--- a/_dist_/index.css
+++ b/_dist_/index.css
@@ -1,3 +1,23 @@
 @import "../_snowpack/pkg/tailwindcss/dist/base.css";
 @import "../_snowpack/pkg/tailwindcss/dist/components.css";
 @import "../_snowpack/pkg/tailwindcss/dist/utilities.css";
+*{
+    border: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+body{
+    background: #f8f8f8;
+}
+.container{
+    display: grid;
+    width: 100%;
+    justify-content: center;
+    grid-template-columns:repeat(auto-fill, 300px);
+    gap: 10px;
+    justify-items: center;
+}
+ .bg-container{
+    
+ }
+ 
